--- a/Sistem Keuangan Daarul Jannah/static/CSS/base.css
+++ b/Sistem Keuangan Daarul Jannah/static/CSS/base.css
@@ -328,6 +328,9 @@ nav a h5{
     background-color: transparent;
     
 }
+.search-bar input{
+    width:65%;
+}
 
 .dtl-style select, .dtl-style input{
     height: 100%;
@@ -381,6 +384,9 @@ th,td{
     /* padding: 5px; */
 }
 
+td{
+    padding:5px;
+}
 .table a{
     color: black;
     font-size: 0.9vw;
