--- a/Sistem Keuangan Daarul Jannah/templates/base.html
+++ b/Sistem Keuangan Daarul Jannah/templates/base.html
@@ -73,7 +73,7 @@
                         <li><a href="/logout" class="logout-btn">logout</a></li>
                     </div>
                 </div>
-                <div style="float:right;padding-right:10px">
+                <div style="float:right;padding-right:10px; text-align:right">
                     <h4>{{session['nama']}}</h4>
                     <p>{{session['nip']}}</p>
                 </div>
