--- a/Sistem Keuangan Daarul Jannah/static/CSS/base.css
+++ b/Sistem Keuangan Daarul Jannah/static/CSS/base.css
@@ -336,11 +336,14 @@ nav a h5{
     height: 100%;
     border: none;
     font-weight: bolder;
-    /* padding: 0; */
     padding-left: 5px;
     background-color: transparent;
     width: 100%;
     font-size: 1vw;
+}
+
+.dtl-style input[type=number]{
+    width:97% !important;
 }
 
 .search-bar select{
