--- a/Sistem Keuangan Daarul Jannah/static/CSS/base.css
+++ b/Sistem Keuangan Daarul Jannah/static/CSS/base.css
@@ -338,7 +338,7 @@ nav a h5{
     font-weight: bolder;
     padding-left: 5px;
     background-color: transparent;
-    width: 100%;
+    width: 95%;
     font-size: 1vw;
 }
 
@@ -483,7 +483,7 @@ th {
     border: 1px solid #CCCCCC;
     width: 100%;
     border-radius: 10px;
-    /* padding: 5px; */
+    margin-right: 2%;
 }
 
 .ch-btn{
