dynamic year on copyright

--- a/Sistem Keuangan Daarul Jannah/templates/base.html
+++ b/Sistem Keuangan Daarul Jannah/templates/base.html
@@ -87,7 +87,7 @@
 
             <!-- footer -->
             <div class="footer">
-                <p>Copyright 2022 Sekolah Daarul Jannah</p>
+                <p>Copyright &copy; {{session['year']}} Sekolah Daarul Jannah</p>
             </div>
 
            
