--- a/Sistem Keuangan Daarul Jannah/templates/login-page.html
+++ b/Sistem Keuangan Daarul Jannah/templates/login-page.html
@@ -48,7 +48,7 @@
     <footer class="bg-light text-center text-lg-start footer">
       <!-- Copyright -->
       <div class="text-left p-3">
-        Copyright © 2022 Sekolah Daarul Jannah
+        Copyright © {{session['year']}} Sekolah Daarul Jannah
       </div>
       <!-- Copyright -->
     </footer>
