penambahan atribut unit pegawai

--- a/Sistem Keuangan Daarul Jannah/templates/datapegawai.html
+++ b/Sistem Keuangan Daarul Jannah/templates/datapegawai.html
@@ -47,12 +47,23 @@
                             
                             <div class="row">
                                 <div class="row detail">
+                                    <h4 class="in-1">Unit</h4>
+                                    <h4>:</h4>
+                                    <div class="dtl-style">
+                                        <h4>{{pegawai.unit}}</h4>
+                                    </div>
+                                </div>
+                                <div class="row detail">
                                     <h4 class="in-1">Jabatan</h4>
                                     <h4>:</h4>
                                     <div class="dtl-style">
                                         <h4>{{pegawai.jabatan}}</h4>
                                     </div>
                                 </div>
+                            </div>
+                                
+                            <div class="row">
+                                
                                 <div class="row detail">
                                     <h4 class="in-1">Jenis Kelamin</h4>
                                     <h4>:</h4>
@@ -60,22 +71,19 @@
                                         <h4>{{pegawai.jenis_kelamin}}</h4>
                                     </div>
                                 </div>
-                            </div>
-                                
-                            <div class="row">
                                 <div class="row detail">
-                                    <h4 class="in-1">Otoritas Sistem</h4>
+                                    <h4 class="in-2">Otoritas Sistem</h4>
                                     <h4>:</h4>
                                     <div class="dtl-style">
                                         <h4>{{pegawai.otoritas}}</h4>
                                     </div>
                                 </div>
-                                <div class="row detail">
-                                    <h4 class="in-1">Username</h4>
-                                    <h4>:</h4>
-                                    <div class="dtl-style">
-                                        <h4>{{pegawai.username}}</h4>
-                                    </div>
+                            </div>
+                            <div class="row detail">
+                                <h4 class="in-2">Username</h4>
+                                <h4>:</h4>
+                                <div class="dtl-style">
+                                    <h4>{{pegawai.username}}</h4>
                                 </div>
                             </div>
                             <div class="row detail">
