post-attribute addition adjustment

--- a/Sistem Keuangan Daarul Jannah/templates/datasiswa.html
+++ b/Sistem Keuangan Daarul Jannah/templates/datasiswa.html
@@ -84,10 +84,10 @@
                             
                     </div>
                     <div class="row cmd-btn" style="justify-content:flex-end;">
-                        <a href="{{ url_for('ubah_siswa', nis = siswa['nis']) }}">
+                        <a href="{{ url_for('ubah_siswa', nis = siswa['nis']) }}" title="Ubah Data Siswa/i">
                             <p class="ch-btn btn">Ubah Data Siswa/i</p>
                         </a>
-                        <a href="{{ url_for('hapus_siswa', nis = siswa['nis']) }}">
+                        <a href="{{ url_for('hapus_siswa', nis = siswa['nis']) }}" title="Hapus Data Siswa/i">
                             <p class="del-btn btn">Hapus Data Siswa/i</p>
                         </a>
                 </div> 
