--- a/Sistem Keuangan Daarul Jannah/templates/tambahdatapegawai.html
+++ b/Sistem Keuangan Daarul Jannah/templates/tambahdatapegawai.html
@@ -26,7 +26,7 @@
                                     <h4 class="in-2">Nama</h4>
                                     <h4>:</h4>
                                     <div class="dtl-style">
-                                        <input type="text" id="floatingInput" placeholder="Masukkan Nama" name="nama_pegawai" required>
+                                        <input type="text" id="nama" placeholder="Masukkan Nama" name="nama_pegawai" required>
                                     </div>
                                 </div>
                                    
