--- a/Sistem Keuangan Daarul Jannah/templates/ubahdatasiswa.html
+++ b/Sistem Keuangan Daarul Jannah/templates/ubahdatasiswa.html
@@ -151,7 +151,7 @@
                     </div>
                     <div class="row cmd-btn" style="justify-content:flex-end;">
                         
-                        <input type="submit" value="Simpan Data Siswa/i" class="p-btn btn konten-profil" style="border:none">
+                        <input type="submit" value="Simpan Data Siswa/i" class="p-btn btn konten-profil" style="border:none" title="Simpan Data Siswa/i">
                         
                     </div> 
                 </div>
