--- a/Sistem Keuangan Daarul Jannah/templates/datapegawai.html
+++ b/Sistem Keuangan Daarul Jannah/templates/datapegawai.html
@@ -102,7 +102,7 @@
                         <a href="">
                             <p class="ch-btn btn">Ubah Data Pegawai</p>
                         </a>
-                        <a href="">
+                        <a href="{{url_for('hapus_pegawai', nip = pegawai['nip'])}}">
                             <p class="del-btn btn">Hapus Data Pegawai</p>
                         </a>
                 </div> 
