--- a/Sistem Keuangan Daarul Jannah/templates/ubahdatapegawai.html
+++ b/Sistem Keuangan Daarul Jannah/templates/ubahdatapegawai.html
@@ -3,15 +3,15 @@
 <html>
     <head>
         {% block head%}
-        <title>Pengubahan Data Siswa - Sistem Pembayaran DJ</title>
-        <script>document.title = "Pengubahan Data Siswa - Sistem Pembayaran DJ"</script>
+        <title>Pengubahan Data Pegawai - Sistem Pembayaran DJ</title>
+        <script>document.title = "Pengubahan Data Pegawai - Sistem Pembayaran DJ"</script>
         {% endblock %}
     </head>
 
 <body>
     <!-- Sidebar -->
             {% block body %}
-            <h1 class="page-title">Ubah Data Siswa/i Daarul Jannah</h1>
+            <h1 class="page-title">Ubah Data Pegawai Daarul Jannah</h1>
             <h4 class="sub-title">Sistem Cek Pembayaran Sekolah Daarul Jannah</h4>
             <form action="{{ url_for('ubah_siswa', nis = siswa['nis']) }}" method="post">
             <div class="container">
@@ -30,14 +30,14 @@
                                
                             <div class="row">
                                 <div class="row detail">
-                                    <h4 class="in-1">NIS</h4>
+                                    <h4 class="in-1">NIP</h4>
                                     <h4>:</h4>
                                     <div class="dtl-style">
                                         <input type="text" id="floatingInput" placeholder="Masukkan NIS" name="nis" value="{{siswa.nis}}" readonly>
                                     </div>
                                 </div>
                                 <div class="row detail">
-                                    <h4 class="in-1">NISN</h4>
+                                    <h4 class="in-1">Status</h4>
                                     <h4>:</h4>
                                     <div class="dtl-style">
                                         <input type="text" id="NISN" placeholder="Masukkan NISN" name="nisn" required value="{{siswa.nisn}}" maxlength="10" minlength="10">
@@ -47,7 +47,7 @@
                             
                             <div class="row">
                                 <div class="row detail">
-                                    <h4 class="in-1">Tingkat</h4>
+                                    <h4 class="in-1">Jabatan</h4>
                                     <h4>:</h4>
                                     <div class="dtl-style">
                                         <h4>{{tingkat}}</h4>
